--- a/lerna-apps-04/packages/shared/package.json
+++ b/lerna-apps-04/packages/shared/package.json
@@ -14,5 +14,6 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
-  }
+  },
+  "gitHead": "060af118341e2e6b27a0c4d956117f6951c8e64f"
 }
